# bevy-playground

./: .gitignore  LICENSE
bevy-platformer/: Cargo.toml
bevy-platformer/src/: camera.rs  collectibles.rs  collectibles_animation.rs  collision_fix.rs  debug.rs  ground_detection.rs  hit_box.rs  main.rs  map.rs  movement.rs  player.rs  player_animation.rs  sprite_animation.rs  user_input.rs
hk-mantis-bevy/: Cargo.toml
hk-mantis-bevy/src/: main.rs  player.rs  sprite_animation.rs
spaceship_game/: Cargo.toml
spaceship_game/src/: asset_loader.rs  asteroids.rs  camera.rs  collision_detection.rs  debug.rs  despawn.rs  health.rs  main.rs  movement.rs  schedule.rs  spaceship.rs  state.rs
